--- a/src/components/utils/index.html
+++ b/src/components/utils/index.html
@@ -7,15 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
 
     <title>Document</title>
   </head>
   <body>
-    <script src="./src/index.js"></script>
-
-    <script src="./src/components/Buttons.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
